--- a/github_특강/191216_01_git기초.md
+++ b/github_특강/191216_01_git기초.md
@@ -1,17 +1,35 @@
-**GIT 기초**
+# **GIT 기초**
 
-**개념**
+## **개념**
 
-**SCM 이란?**
+### **SCM 이란?**
 
 Source Code Manger 의 약자로 코드의 버전을 관리하기 위해 존재한다.
 
-**Git**
+### **Git**
 
 git은 Linus Torvalds 가 만든 SCM 으로 현재 가장 많이 사용한다.
 
-**Github**
+### **Github**
 
 github은, git 이 관리하는 Repo 의 원격 저장소를 제공하는 서비스다. 가장 많이 사용하며, 오픈소스 프로젝트들이 성장하는 곳이다. 최근 MS에 인수되었다.
 
-**Source Tree**
+### **Source Tree**
+
+4차산업 소프트웨어와  프로그래밍
+
+프로그래밍을 왜 배워야 하는가?
+
+
+
+![20191216_7](C:\Users\student\Desktop\교육\2019.12.16\20191216_7.jpg)
+
+![20191216_8](C:\Users\student\Desktop\교육\2019.12.16\20191216_8.jpg)
+
+![20191216_9](C:\Users\student\Desktop\교육\2019.12.16\20191216_9.jpg)
+
+## 오늘 배울 프로그래밍
+
+
+
+![20191216_11](C:\Users\student\Desktop\교육\2019.12.16\20191216_11.jpg)
