--- a/github_특강/191216_01_git기초.md
+++ b/github_특강/191216_01_git기초.md
@@ -33,3 +33,35 @@ github은, git 이 관리하는 Repo 의 원격 저장소를 제공하는 서비
 
 
 ![20191216_11](C:\Users\student\Desktop\교육\2019.12.16\20191216_11.jpg)
+
+**사용 프로그램**
+
+**- Git&Github (Git : https://git-scm.com/)(Github : https://github.com/)**
+
+**- SourceTree (https://www.sourcetreeapp.com/)**
+
+**- MS Visual Code (https://code.visualstudio.com/)**
+
+**
+\- Typora Editor (https://typora.io/#windows)**
+
+![20191216_15](C:\Users\student\Desktop\교육\2019.12.16\20191216_15.jpg)
+
+
+
+![20191216_16](C:\Users\student\Desktop\교육\2019.12.16\20191216_16.jpg)
+
+금일 교육 진행 내용
+
+1. 프로그램 설치(Git, Visualcode, SourceTree)
+
+2. SourceTree를 통해 디렉토리에 Git 연결, .gitignore(번외폴더 생성)
+
+3. 디렉토리에 컨텐츠 등록 > SourceCode에서 관리 시작
+
+4. Git이 적용된 디렉토리를 Github와 연결
+
+5. Push를 통해 관리중인 자료를 Github에 Backup
+
+6. Typora Editor 설치 후 사용
+
