--- a/github_특강/191217_01_git중급.md
+++ b/github_특강/191217_01_git중급.md
@@ -10,3 +10,21 @@
 
 **이 작업을 마치고 나면 Git 저장소에는 다섯 개의 데이터 개체가 생긴다. 각 파일에 대한 Blob 세 개, 파일과 디렉토리 구조가 들어 있는 트리 개체 하나, 메타데이터와 루트 트리를 가리키는 포인터가 담긴 커밋 개체 하나이다.**
 
+#### source tree 설치,파일 삭제  관련 주소
+
+https://m.blog.naver.com/PostView.nhn?blogId=hhw1990&logNo=221243608553&proxyReferer=https%3A%2F%2Fwww.google.co.kr%2F
+
+#### source tree GitHub 파일삭제
+
+![image-20191217144341505](191217_01_git중급.assets/image-20191217144341505.png)
+
+![image-20191217144414639](191217_01_git중급.assets/image-20191217144414639.png)
+
+
+
+![image-20191217144449405](191217_01_git중급.assets/image-20191217144449405.png)
+
+![image-20191217144526393](191217_01_git중급.assets/image-20191217144526393.png)
+
+![image-20191217144609107](191217_01_git중급.assets/image-20191217144609107.png)
+
