Git에서 삭제 내용 추가

--- a/github_특강/191217_01_git중급.md
+++ b/github_특강/191217_01_git중급.md
@@ -28,3 +28,17 @@ https://m.blog.naver.com/PostView.nhn?blogId=hhw1990&logNo=221243608553&proxyRef
 
 ![image-20191217144609107](191217_01_git중급.assets/image-20191217144609107.png)
 
+#### source tree 에서 삭제 중 초기화
+
+![image-20191217145000438](191217_01_git중급.assets/image-20191217145000438.png)
+
+##### 체크아웃은 진행 중인 커밋단계 내용 삭제
+
+![image-20191217145126452](191217_01_git중급.assets/image-20191217145126452.png)
+
+##### 지정 위치 커밋까지 현재 브랜치를 초기화의 경우 세가지로 나뉨
+
+![image-20191217145315873](191217_01_git중급.assets/image-20191217145315873.png)
+
+##### soft, Mixed의 경우 작성 소스는 남아있지만 Hard는 완전히 삭제 
+
