--- a/github_특강/191217_01_git중급.md
+++ b/github_특강/191217_01_git중급.md
@@ -42,3 +42,27 @@ https://m.blog.naver.com/PostView.nhn?blogId=hhw1990&logNo=221243608553&proxyRef
 
 ##### soft, Mixed의 경우 작성 소스는 남아있지만 Hard는 완전히 삭제 
 
+
+
+##### 협업중 브랜치를 통한 파일 삭제
+
+![image-20191217162511528](191217_01_git중급.assets/image-20191217162511528.png)
+
+### #19.12.17
+
+#### Typora 설치->원격 주소 받기 github 
+
+![image-20191217165349443](191217_01_git중급.assets/image-20191217165349443.png)
+
+<img src="../../practice1_git/강의중 추가내용/TIL.assets/image-20191217165732300.png" alt="image-20191217165732300" style="zoom:200%;" />
+
+#### 추가에서 위 주소 입력
+
+![image-20191217165955958](191217_01_git중급.assets/image-20191217165955958.png)
+
+#### 파일<환경설정
+
+![image-20191217170044073](191217_01_git중급.assets/image-20191217170044073.png)
+
+#### 이미지< 세군데 체크 (이미지 파일 테포라 문서에 표시 가능)
+
