github 특강 정리 자료 18일자

--- a/github_특강/191217_01_git중급.md
+++ b/github_특강/191217_01_git중급.md
@@ -66,3 +66,5 @@ https://m.blog.naver.com/PostView.nhn?blogId=hhw1990&logNo=221243608553&proxyRef
 
 #### 이미지< 세군데 체크 (이미지 파일 테포라 문서에 표시 가능)
 
+![image-20191217175011590](191217_01_git중급.assets/image-20191217175011590.png)
+
