--- a/github_특강/191218_01_git중급.md
+++ b/github_특강/191218_01_git중급.md
@@ -22,6 +22,12 @@ push: 커밋들을 원격 저장소에 업로드
 
 코드 뭉처 버리기 :마지막 커밋으로 되돌아가고 싶을때 사용
 
+브랜치 : 기존 내용을 유지한 채 새로운 내용을 추가하고 싶을때 사용한다.
+
+체크아웃 : 특정 브랜치(혹은 커밋)으로 돌아가고 싶을 때 사용.
+
+소스트리의 체크아웃: 브렌치 이름을 더블클릭하는 것만으로 체크 아웃 가능.
+
 
 
 #### 오픈소스 장점
